@@ -5,6 +5,8 @@ ver 0.21.6 (not yet released)
   - fix "list" with filter expression
 * input
   - cdio_paranoia: fix build failure due to missing #include
+* decoder
+  - opus: fix replay gain when there are no other tags
 * playlist
   - flac: fix use-after-free bug
 * support abstract sockets on Linux
